Fix contrast issues

--- a/css/styles.css
+++ b/css/styles.css
@@ -294,7 +294,7 @@ textarea {
   width: 94%;
   height: 2.5rem;
   font-size: 1rem;
-  background-color:#6BA244;
+  background-color:#41751c;
   color: #fff;
   border: none;
   margin: auto;
